[B]Version 1.0.0[/B]
- Fixed: Frodo version requirements
- Fixed: Empty list exception for "Local movies"

[B]Version 0.4.6[/B]
- Fixed: addon.xml to get into official repository
- Added: Show "watched" stripes in tvshow detail
- Fixed: few bugs

[B]0.0.1[/B]

- Initial addon