@@ -56,14 +56,29 @@ class OfflineStvList(object):
 		data_path = xbmc.translatePath('special://masterprofile/addon_data/')
 		return os.path.join(data_path, addon_id, 'cache.dat')
 
-	def serialize(self):
-		json_str = json.dumps(self.getItems())
+	@classmethod
+	def getDefaultList(cls, apiClient=None):
+		if not apiClient:
+			apiClient = AppApiClient.getDefaultClient()
 
-		return json_str
+		iuid = get_install_id()
+		cache = StvList(iuid, apiClient)
+			
+		try:
+			cache.load()
+		except:
+			# first time
+			log('CACHE restore failed. If this is your first run, its ok')
+
+		return cache
+
+	def serialize(self):	
+		pickled_base64_cache = base64.b64encode(pickle.dumps([self.items, self.byType, self.byTypeId, self.byFilename, self.byStvId]))
+		return pickled_base64_cache
 
 	def deserialize(self, _string):
-		json_obj = json.loads(_string)
-		return json_obj
+		self.items, self.byType, self.byTypeId, self.byFilename, self.byStvId = pickle.loads(base64.b64decode(_string))
+		self.dump()
 
 	def log(self, msg):
 		log('CACHE / ' + msg)
@@ -88,7 +103,7 @@ class OfflineStvList(object):
 		movie = xbmc_rpc.get_details(atype, aid)
 		movie['type'] = atype
 		movie['id'] = aid
-
+		
 		# if not in cache, it's been probably added
 		if not self.hasTypeId(movie['type'], movie['id']):
 			# get stv hash
@@ -119,15 +134,19 @@ class OfflineStvList(object):
 			else:
 				self.log('File NOT identified %s' % movie['file'])
 
-			self.put(movie)
+			# current block could raise ApiCallError, when there is not a real problem
+			try:
+				self.put(movie)
+			except Exception, e:
+				self.log('EXCEPTION / ' + unicode(e.message))
 
 			# debug warning on movie type mismatch
 			if movie['type'] != title.get('type'):
 				self.log('Xbmc/Synopsi identification type mismatch: %s / %s in [%s]' % (movie['type'], title.get('type'), movie.get('file')))
 
 			# for episode, add tvshow
-			if title.get('type') == 'episode' and title.has_key('id') and item['type'] == 'episode':	
-				self.add_tvshow(title['tvshow_id'], item['tvshowid'])
+			if title.get('type') == 'episode' and title.has_key('id') and movie['type'] == 'episode':
+				self.add_tvshow(title['tvshow_id'], movie['tvshowid'])
 
 		# it is already in cache, some property has changed (e.g. lastplayed time)
 		else:
@@ -386,15 +405,8 @@ class OfflineStvList(object):
 		f.close()
 
 	def load(self):
-		self.clear()
 		f = open(self.filePath, 'r')
-		json_obj = self.deserialize(f.read())
-		for item in json_obj:
-			try:
-				OfflineStvList.put(self, item)
-			except DuplicateStvIdException, e:
-				self.log('LOAD / ' + unicode(e))
-
+		self.deserialize(f.read())
 		f.close()
 
 	def _getKey(self, atype, aid):
@@ -465,9 +477,9 @@ class AppStvList(OnlineStvList):
 		xbmc_id = tvshow['xbmc_id']
 				
 		seasons = []		
-		for i in self.byType['episode']:
+		for i in self.byType['episode'].values():
 			if i['tvshowid'] == xbmc_id and i['season'] not in seasons:
-				seasons.append[i['season']]
+				seasons.append(i['season'])
 		
 		return seasons		
 
